starts on functionality to download and play videos from s3 (changes to upload.html, main.py, download_video.py

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -30,3 +30,11 @@
 		<input type="submit" value="Upload">
 	</p>
 </form>
+<h1>Or choose a video to watch!</h1>
+<form method="post" action="/">
+	<ul>
+		{% for video in videos_list %}
+			<input type="submit" value={{ video }} name= {{ videos_list.index(video) }}>
+		{% endfor %}
+	</ul>
+</form>
