--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
     <title>Authenticate</title>
 </head>
 <body>
+  <img src="static\noobtube.png" alt="noobtube logo">
     <p>
         {% with messages = get_flashed_messages() %}
           {% if messages %}
